feat(core): make ID based on interface name and source file name

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "api": ["../src/index"]
+      "api": ["../src/api"]
     },
     "moduleResolution": "classic"
   },
